add source for timer functionality in utilities and register in Cmake

--- a/components/wifi_module/CMakeLists.txt
+++ b/components/wifi_module/CMakeLists.txt
@@ -2,5 +2,6 @@ idf_component_register(SRCS
                     "wifi_module.c" 
                     "web_server.c"
                     "ble_provisioning.c"
+                    "utilities.c"
                     INCLUDE_DIRS "include"
                     PRIV_REQUIRES esp_wifi esp_event nvs_flash esp_http_server bt)
